flutter_sfu_relay/windows/librelay.h

typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
// Ping 回调函数类型
typedef void (*PingCallback)(const char* peerID);
static void setPingCallback(PingCallback cb) {
    pthread_mutex_lock(&pingCallbackMutex);
    pingCallback = cb;
    pthread_mutex_unlock(&pingCallbackMutex);
}
static void invalidatePingCallback() {
    pthread_mutex_lock(&pingCallbackMutex);
    pingCallback = NULL;
    pthread_mutex_unlock(&pingCallbackMutex);
    usleep(50000); // 50ms grace period
}
static void callPingCallback(const char* peerID) {
    pthread_mutex_lock(&pingCallbackMutex);
    if (pingCallback != NULL) {
        pingCallback(peerID);
    }
    pthread_mutex_unlock(&pingCallbackMutex);
}
// Callback function types for events
typedef void (*EventCallback)(int eventType, const char* roomId, const char* peerId, const char* data);
typedef void (*LogCallback)(int level, const char* message);
// Get current generation (for Go code to check before/after)
static int64_t getCallbackGeneration() {
    return callbackGeneration;
}
// Setter functions - increment generation on each change
static void setEventCallback(EventCallback cb) {
    pthread_mutex_lock(&callbackMutex);
    eventCallback = cb;
    callbackGeneration++;
    pthread_mutex_unlock(&callbackMutex);
}
static void setLogCallback(LogCallback cb) {
    pthread_mutex_lock(&callbackMutex);
    logCallback = cb;
    callbackGeneration++;
    pthread_mutex_unlock(&callbackMutex);
}
// Invalidate all callbacks and wait for grace period
static void invalidateAllCallbacks() {
    pthread_mutex_lock(&callbackMutex);
    eventCallback = NULL;
    logCallback = NULL;
    callbackGeneration++;
    pthread_mutex_unlock(&callbackMutex);

    // Grace period: allow any in-flight operations to detect the invalidation
    usleep(50000); // 50ms
}
// Caller functions - check if callback is still valid
static void callEventCallback(int eventType, const char* roomId, const char* peerId, const char* data) {
    pthread_mutex_lock(&callbackMutex);
    if (eventCallback != NULL) {
        eventCallback(eventType, roomId, peerId, data);
    }
    pthread_mutex_unlock(&callbackMutex);
}
static void callLogCallback(int level, const char* message) {
    pthread_mutex_lock(&callbackMutex);
    if (logCallback != NULL) {
        logCallback(level, message);
    }
    pthread_mutex_unlock(&callbackMutex);
}
// KeepaliveCreate 创建心跳管理器
// intervalMs: 心跳间隔（毫秒）
// timeoutMs: 超时时间（毫秒）
//
extern __declspec(dllexport) int KeepaliveCreate(char* roomID, int intervalMs, int timeoutMs);
// KeepaliveDestroy 销毁心跳管理器
//
extern __declspec(dllexport) int KeepaliveDestroy(char* roomID);
// KeepaliveStart 启动心跳检测
//
extern __declspec(dllexport) int KeepaliveStart(char* roomID);
// KeepaliveStop 停止心跳检测
//
extern __declspec(dllexport) int KeepaliveStop(char* roomID);
// KeepaliveAddPeer 添加需要监控的 Peer
//
extern __declspec(dllexport) int KeepaliveAddPeer(char* roomID, char* peerID);
// KeepaliveRemovePeer 移除 Peer
//
extern __declspec(dllexport) int KeepaliveRemovePeer(char* roomID, char* peerID);
// KeepaliveHandlePong 处理收到的 Pong
// 当 Dart 层收到对方的 pong 响应时调用此函数
//
extern __declspec(dllexport) int KeepaliveHandlePong(char* roomID, char* peerID);
// KeepaliveGetPeerStatus 获取 Peer 状态
// 返回: 0=Unknown, 1=Online, 2=Slow, 3=Offline
//
extern __declspec(dllexport) int KeepaliveGetPeerStatus(char* roomID, char* peerID);
// KeepaliveGetPeerRTT 获取 Peer 的 RTT（毫秒）
//
extern __declspec(dllexport) int64_t KeepaliveGetPeerRTT(char* roomID, char* peerID);
// KeepaliveGetPeerInfo 获取 Peer 心跳详细信息
//
extern __declspec(dllexport) char* KeepaliveGetPeerInfo(char* roomID, char* peerID);