flutter_sfu_relay/lib/flutter_sfu_relay_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: unused_field
// ignore_for_file: unused_element

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for librelay.h (Go SFU Core).
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class FlutterSfuRelayBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterSfuRelayBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterSfuRelayBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int _GoStringLen(_GoString_ s) {
    return __GoStringLen(s);
  }

  late final __GoStringLenPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(_GoString_)>>(
        '_GoStringLen',
      );
  late final __GoStringLen = __GoStringLenPtr
      .asFunction<int Function(_GoString_)>();

  ffi.Pointer<ffi.Char> _GoStringPtr(_GoString_ s) {
    return __GoStringPtr(s);
  }

  late final __GoStringPtrPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(_GoString_)>>(
        '_GoStringPtr',
      );
  late final __GoStringPtr = __GoStringPtrPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(_GoString_)>();

  /// Mutex for thread-safe ping callback access
  late final ffi.Pointer<pthread_mutex_t> _pingCallbackMutex =
      _lookup<pthread_mutex_t>('pingCallbackMutex');

  pthread_mutex_t get pingCallbackMutex => _pingCallbackMutex.ref;

  /// 存储 ping 回调
  late final ffi.Pointer<PingCallback> _pingCallback = _lookup<PingCallback>(
    'pingCallback',
  );

  PingCallback get pingCallback => _pingCallback.value;

  set pingCallback(PingCallback value) => _pingCallback.value = value;

  void setPingCallback(PingCallback cb) {
    return _setPingCallback(cb);
  }

  late final _setPingCallbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(PingCallback)>>(
        'setPingCallback',
      );
  late final _setPingCallback = _setPingCallbackPtr
      .asFunction<void Function(PingCallback)>();

  void invalidatePingCallback() {
    return _invalidatePingCallback();
  }

  late final _invalidatePingCallbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
        'invalidatePingCallback',
      );
  late final _invalidatePingCallback = _invalidatePingCallbackPtr
      .asFunction<void Function()>();

  void callPingCallback(ffi.Pointer<ffi.Char> peerID) {
    return _callPingCallback(peerID);
  }

  late final _callPingCallbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'callPingCallback',
      );
  late final _callPingCallback = _callPingCallbackPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Generation counter for detecting stale callbacks
  /// Incremented each time callbacks are set or cleared
  late final ffi.Pointer<ffi.Int64> _callbackGeneration = _lookup<ffi.Int64>(
    'callbackGeneration',
  );

  int get callbackGeneration => _callbackGeneration.value;

  set callbackGeneration(int value) => _callbackGeneration.value = value;

  /// Mutex for thread-safe callback access
  late final ffi.Pointer<pthread_mutex_t> _callbackMutex =
      _lookup<pthread_mutex_t>('callbackMutex');

  pthread_mutex_t get callbackMutex => _callbackMutex.ref;

  /// Store the callbacks
  late final ffi.Pointer<EventCallback> _eventCallback = _lookup<EventCallback>(
    'eventCallback',
  );

  EventCallback get eventCallback => _eventCallback.value;

  set eventCallback(EventCallback value) => _eventCallback.value = value;

  late final ffi.Pointer<LogCallback> _logCallback = _lookup<LogCallback>(
    'logCallback',
  );

  LogCallback get logCallback => _logCallback.value;

  set logCallback(LogCallback value) => _logCallback.value = value;

  /// Get current generation (for Go code to check before/after)
  int getCallbackGeneration() {
    return _getCallbackGeneration();
  }

  late final _getCallbackGenerationPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
        'getCallbackGeneration',
      );
  late final _getCallbackGeneration = _getCallbackGenerationPtr
      .asFunction<int Function()>();

  /// Setter functions - increment generation on each change
  void setEventCallback(EventCallback cb) {
    return _setEventCallback(cb);
  }

  late final _setEventCallbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(EventCallback)>>(
        'setEventCallback',
      );
  late final _setEventCallback = _setEventCallbackPtr
      .asFunction<void Function(EventCallback)>();

  void setLogCallback(LogCallback cb) {
    return _setLogCallback(cb);
  }

  late final _setLogCallbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(LogCallback)>>(
        'setLogCallback',
      );
  late final _setLogCallback = _setLogCallbackPtr
      .asFunction<void Function(LogCallback)>();

  /// Invalidate all callbacks and wait for grace period
  void invalidateAllCallbacks() {
    return _invalidateAllCallbacks();
  }

  late final _invalidateAllCallbacksPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
        'invalidateAllCallbacks',
      );
  late final _invalidateAllCallbacks = _invalidateAllCallbacksPtr
      .asFunction<void Function()>();

  /// Caller functions - check if callback is still valid
  void callEventCallback(
    int eventType,
    ffi.Pointer<ffi.Char> roomId,
    ffi.Pointer<ffi.Char> peerId,
    ffi.Pointer<ffi.Char> data,
  ) {
    return _callEventCallback(eventType, roomId, peerId, data);
  }

  late final _callEventCallbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('callEventCallback');
  late final _callEventCallback = _callEventCallbackPtr
      .asFunction<
        void Function(
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void callLogCallback(int level, ffi.Pointer<ffi.Char> message) {
    return _callLogCallback(level, message);
  }

  late final _callLogCallbackPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Char>)>
      >('callLogCallback');
  late final _callLogCallback = _callLogCallbackPtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Char>)>();

  /// KeepaliveCreate 创建心跳管理器
  /// intervalMs: 心跳间隔（毫秒）
  /// timeoutMs: 超时时间（毫秒）
  int KeepaliveCreate(
    ffi.Pointer<ffi.Char> roomID,
    int intervalMs,
    int timeoutMs,
  ) {
    return _KeepaliveCreate(roomID, intervalMs, timeoutMs);
  }

  late final _KeepaliveCreatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int)
        >
      >('KeepaliveCreate');
  late final _KeepaliveCreate =
      _KeepaliveCreatePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, int, int)
      >();

  /// KeepaliveDestroy 销毁心跳管理器
  int KeepaliveDestroy(ffi.Pointer<ffi.Char> roomID) {
    return _KeepaliveDestroy(roomID);
  }

  late final _KeepaliveDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'KeepaliveDestroy',
      );
  late final _KeepaliveDestroy =
      _KeepaliveDestroyPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// KeepaliveStart 启动心跳检测
  int KeepaliveStart(ffi.Pointer<ffi.Char> roomID) {
    return _KeepaliveStart(roomID);
  }

  late final _KeepaliveStartPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'KeepaliveStart',
      );
  late final _KeepaliveStart =
      _KeepaliveStartPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// KeepaliveStop 停止心跳检测
  int KeepaliveStop(ffi.Pointer<ffi.Char> roomID) {
    return _KeepaliveStop(roomID);
  }

  late final _KeepaliveStopPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'KeepaliveStop',
      );
  late final _KeepaliveStop =
      _KeepaliveStopPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// KeepaliveAddPeer 添加需要监控的 Peer
  int KeepaliveAddPeer(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
  ) {
    return _KeepaliveAddPeer(roomID, peerID);
  }

  late final _KeepaliveAddPeerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('KeepaliveAddPeer');
  late final _KeepaliveAddPeer =
      _KeepaliveAddPeerPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// KeepaliveRemovePeer 移除 Peer
  int KeepaliveRemovePeer(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
  ) {
    return _KeepaliveRemovePeer(roomID, peerID);
  }

  late final _KeepaliveRemovePeerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('KeepaliveRemovePeer');
  late final _KeepaliveRemovePeer =
      _KeepaliveRemovePeerPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// KeepaliveHandlePong 处理收到的 Pong
  /// 当 Dart 层收到对方的 pong 响应时调用此函数
  int KeepaliveHandlePong(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
  ) {
    return _KeepaliveHandlePong(roomID, peerID);
  }

  late final _KeepaliveHandlePongPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('KeepaliveHandlePong');
  late final _KeepaliveHandlePong =
      _KeepaliveHandlePongPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// KeepaliveGetPeerStatus 获取 Peer 状态
  /// 返回: 0=Unknown, 1=Online, 2=Slow, 3=Offline
  int KeepaliveGetPeerStatus(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
  ) {
    return _KeepaliveGetPeerStatus(roomID, peerID);
  }

  late final _KeepaliveGetPeerStatusPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('KeepaliveGetPeerStatus');
  late final _KeepaliveGetPeerStatus =
      _KeepaliveGetPeerStatusPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// KeepaliveGetPeerRTT 获取 Peer 的 RTT（毫秒）
  int KeepaliveGetPeerRTT(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
  ) {
    return _KeepaliveGetPeerRTT(roomID, peerID);
  }

  late final _KeepaliveGetPeerRTTPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int64 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('KeepaliveGetPeerRTT');
  late final _KeepaliveGetPeerRTT =
      _KeepaliveGetPeerRTTPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// KeepaliveGetPeerInfo 获取 Peer 心跳详细信息
  ffi.Pointer<ffi.Char> KeepaliveGetPeerInfo(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
  ) {
    return _KeepaliveGetPeerInfo(roomID, peerID);
  }

  late final _KeepaliveGetPeerInfoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('KeepaliveGetPeerInfo');
  late final _KeepaliveGetPeerInfo =
      _KeepaliveGetPeerInfoPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();
